# scip-lsp

./: MODULE.bazel  README.md  go.mod  go.sum  requirements.txt
.github/workflows/: ci.yml
bsp_server/bazel/: execute_query.py
bsp_server/indexer/: scip.bzl
src/extension/: package-lock.json  package.json
src/main/java/com/uber/intellij/jd/: BUILD.bazel
src/main/java/com/uber/scip/aggregator/: BUILD.bazel
src/main/java/com/uber/scip/aggregator/scip/: BUILD.bazel
src/main/java/com/uber/scip/extractor/: BUILD.bazel
src/scip-lib/mapper/: scip_lsp.go  scip_lsp_test.go
src/scip-lib/registry/: BUILD.bazel  partial_registry.go  types.go
src/test/java/com/uber/intellij/jd/: BUILD.bazel
src/test/java/com/uber/scip/aggregator/: BUILD.bazel
src/test/java/com/uber/scip/aggregator/scip/: BUILD.bazel
src/test/java/com/uber/scip/extractor/: BUILD.bazel
src/ulsp/: BUILD.bazel  README.md  main.go
src/ulsp/config/: base.yaml
src/ulsp/controller/indexer/: BUILD.bazel  indexer.go  indexer_test.go  java_indexer.go  java_indexer_test.go
src/ulsp/controller/quick-actions/: BUILD.bazel  quick_actions.go  quick_actions_test.go
src/ulsp/controller/quick-actions/action/: action.go
src/ulsp/controller/quick-actions/actions-java/: action_java_build.go  action_java_build_test.go  action_java_sync.go  action_java_sync_test.go  action_java_test_coverage.go  action_java_test_coverage_test.go  action_java_test_explorer_info.go  action_java_test_run.go  action_java_test_run_test.go
src/ulsp/controller/scala-assist/: scala_assist_test.go
src/ulsp/controller/scip/: BUILD.bazel  scip.go  scip_test.go  types.go
src/ulsp/entity/: ulsp_daemon.go
src/ulsp/internal/java-utils/: BUILD.bazel  utils.go  utils_test.go
src/ulsp/rules/: BUILD.bazel  simple_gen.bzl
