load("@contrib_rules_jvm//docs:stardoc-input.bzl", "java_test_suite")

java_test_suite(
    name = "extractor_test",
    srcs = glob(["*.java"]),
    data = ["//src/test/java/com/uber/scip/extractor/resources"],
    runner = "junit5",
    deps = [
        "//src/main/java/com/uber/scip/extractor",
        "//src/test/java/com/uber/utils:test_utils",
        "@scip_lsp_maven//:com_sourcegraph_scip_semanticdb",
        "@scip_lsp_maven//:commons_cli_commons_cli",
        "@scip_lsp_maven_test//:org_assertj_assertj_core",
        "@scip_lsp_maven_test//:org_junit_jupiter_junit_jupiter_api",
        "@scip_lsp_maven_test//:org_junit_jupiter_junit_jupiter_engine",
        "@scip_lsp_maven_test//:org_junit_platform_junit_platform_launcher",
        "@scip_lsp_maven_test//:org_junit_platform_junit_platform_reporting",
        "@scip_lsp_maven_test//:org_mockito_mockito_core",
        "@scip_lsp_maven_test//:org_mockito_mockito_inline",
    ],
)
