load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "scip",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@scip_lsp_maven//:org_slf4j_slf4j_simple",
    ],
    deps = [
        "@scip_lsp_maven//:com_sourcegraph_scip_java_proto",
        "@scip_lsp_maven//:com_sourcegraph_scip_semanticdb",
        "@scip_lsp_maven//:com_sourcegraph_semanticdb_java",
        "@scip_lsp_maven//:com_sourcegraph_semanticdb_javac",
        "@scip_lsp_maven//:commons_cli_commons_cli",
        "@scip_lsp_maven//:commons_io_commons_io",
        "@scip_lsp_maven//:org_jspecify_jspecify",
        "@scip_lsp_maven//:org_slf4j_slf4j_api",
    ],
)
