load("@contrib_rules_jvm//docs:stardoc-input.bzl", "java_test_suite")

java_test_suite(
    name = "scip_test",
    srcs = glob(["*.java"]),
    data = ["//src/test/java/com/uber/scip/aggregator/scip/resources"],
    runner = "junit5",
    deps = [
        "//src/main/java/com/uber/scip/aggregator",
        "//src/main/java/com/uber/scip/aggregator/scip",
        "//src/test/java/com/uber/utils:test_utils",
        "@scip_lsp_maven//:com_sourcegraph_scip_java_proto",
        "@scip_lsp_maven//:com_sourcegraph_scip_semanticdb",
        "@scip_lsp_maven//:commons_cli_commons_cli",
        "@scip_lsp_maven//:commons_io_commons_io",
        "@scip_lsp_maven_test//:org_assertj_assertj_core",
        "@scip_lsp_maven_test//:org_junit_jupiter_junit_jupiter_api",
        "@scip_lsp_maven_test//:org_junit_jupiter_junit_jupiter_engine",
        "@scip_lsp_maven_test//:org_junit_platform_junit_platform_launcher",
        "@scip_lsp_maven_test//:org_junit_platform_junit_platform_reporting",
        "@scip_lsp_maven_test//:org_mockito_mockito_core",
        "@scip_lsp_maven_test//:org_mockito_mockito_inline",
    ],
)
